test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/sub_double_from_ptr.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: y
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  Pointer: 
                    Int: 
                  None: 
            CS: 
              CReturn: 
                CBinary: 
                  CEqual: 
                  CBinary: 
                    CSubtract: 
                    CVar: 
                      TIdentifier: y
                      None: 
                    CConstant: 
                      CConstDouble: 
                        TDouble: 0.000000
                      None: 
                    None: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 0.000000
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
